Add API tp list users by total post views
